# aftertime_core_back

./: .dockerignore  .env.docker.tmp  .gitignore  Dockerfile  README.md  api_service.py  check.py  entrypoint.sh  manage.py  pyproject.toml  zone_marker.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: _general.py  _general_logging.py  dev.py  devDocker.py  devDocker_databases.py  dev_databases.py.temp  dev_databases_sqlite.py  prod.py  prod_databases.py  prod_databases_postgresql.py  test.py  test_databases_postgresql_template.py  test_databases_sqlite.py
core/api/: balance_substances.py  locations.py  substances.py
core/api/vehicles/: ships.py
core/api/zones/: zone.py
core/migrations/: 0001_initial.py  0002_rename_value_from_balancesubstancesrelationsfrom_value_to.py
core/models/: __init__.py  balanceSubstances.py  directRequest.py  locations.py  substances.py
core/structures/: __init__.py
core/test/unit/: __init__.py  (+3 more)
core__REST_BACK/: apps.py  urls.py
core__REST_BACK/apiREST/: __init__.py  debug.py  ping.py  vehicle.py
core__REST_BACK/serializers/: __init__.py  serializer_vehicle_track.py
core__REST_BACK/test/: __init__.py  rest.py  ship_track.py
core__REST_FRONT_USER/: apps.py  urls.py  urls_v2.py
core__REST_FRONT_USER/apiREST/: __init__.py  balance_substances.py  ships.py
core__REST_FRONT_USER/api_rest/: __init__.py  api_rest__balance_substance.py  api_rest__balance_substances.py  api_rest__locations.py  api_rest__ping.py  api_rest__ships.py
core__REST_FRONT_USER/serializers/: __init__.py  balance_substances.py
log/: README.md
(+29 files in other folders)
